--- a/data/tmpl/common/AUTHORS.txt
+++ b/data/tmpl/common/AUTHORS.txt
@@ -1,4 +1,4 @@
-# This is the official list of '{{project}}' authors for copyright purposes.
+# This is the official list of '{{projectName}}' authors for copyright purposes.
 # This file is distinct from the CONTRIBUTORS file.
 # See the latter for an explanation.
 
