--- a/data/tmpl/common/AUTHORS.txt
+++ b/data/tmpl/common/AUTHORS.txt
@@ -1,12 +1,12 @@
-# This is the official list of '{{projectName}}' authors for copyright purposes.
+# This is the official list of '{{project_name}}' authors for copyright purposes.
 # This file is distinct from the CONTRIBUTORS file.
 # See the latter for an explanation.
 
 # Names should be added to this file as
 #	Name or Organization <email address>
 # The email address is not required for organizations.
-
+#
 # Please keep the list sorted.
 
-{{author}}
+{{full_author}}
 
