--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,17 +1,12 @@
-# This is the official list of 'gowizard' authors for copyright purposes.
+# This is the official list of 'goWizard' authors for copyright purposes.
+# This file is distinct from the CONTRIBUTORS file.
+# See the latter for an explanation.
 
 # Names should be added to this file as
-#   Name or Organization <email address>
+#	Name or Organization <email address>
 # The email address is not required for organizations.
-
+#
 # Please keep the list sorted.
 
-# Creator
-# =======
-
 John Mac <charles.beck@sent.com>
-
-# Contributors
-# ============
-
 
