--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
-# This is the official list of 'goWizard' authors for copyright purposes.
+# This is the official list of 'gowizard' authors for copyright purposes.
 # This file is distinct from the CONTRIBUTORS file.
 # See the latter for an explanation.
 
