Writting text files in Markdown

--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,21 @@
-========
 gowizard
 ========
+
+## Text files syntax
+
+The text file templates are written using the Markdown markup language since
+it has a simple syntax and it is easy to read in its raw form.
+
+Here you have some comparisons with another markup languages:
+
+- [Compare and contrast the lightweight markup languages]
+(http://stackoverflow.com/questions/659227/compare-and-contrast-the-lightweight-markup-languages-textile-markdown-and-res)
+- [Lightweight markup language](http://en.wikipedia.org/wiki/Lightweight_markup_language)
+
+And their syntax guides:
+
+- [Quick Syntax Guide](http://greg.vario.us/doc/markdown.txt)
+- [Basics](http://daringfireball.net/projects/markdown/basics)
+- [Syntax](http://daringfireball.net/projects/markdown/syntax)
 
 
