--- a/AUTHORS.mkd
+++ b/AUTHORS.mkd
@@ -1,12 +1,20 @@
-# This is the official list of "gowizard" authors for copyright purposes.
-# This file is distinct from the CONTRIBUTORS file.
-# See the latter for an explanation.
+##### Notice
 
-# Names should be added to this file as
-#	Name or Organization <email address>
-# The email address is not required for organizations.
-#
-# Please keep the list sorted.
+*This is the official list of **gowizard** authors for copyright
+purposes.*
+
+*This file is distinct from the CONTRIBUTORS file. See the latter for an
+explanation.*
+
+*Names should be added to this file as:*
+
+	Name or Organization <email address>
+
+*The email address is not required for organizations.*
+
+*Please keep the list sorted.*
+
+***
 
 John Mac <charles.beck@sent.com>
 
