--- a/CONTRIBUTORS.mkd
+++ b/CONTRIBUTORS.mkd
@@ -1,18 +1,28 @@
-# This is the official list of people who can contribute
-# (and typically have contributed) code to the "gowizard" repository.
-# The AUTHORS file lists the copyright holders; this file lists people.
-# For example, the employees of an organization are listed here
-# but not in AUTHORS, because the organization holds the copyright.
+##### Notice
 
-# Names should be added to this file like so:
-#	Name <email address>
-#
-# Please keep the list sorted.
+*This is the official list of people who can contribute (and typically have
+contributed) code to the **gowizard** repository.*
 
-# Initial author:
-#
+*The AUTHORS file lists the copyright holders; this file lists people. For
+example, the employees of an organization are listed here but not in AUTHORS,
+because the organization holds the copyright.*
+
+*Names should be added to this file like so:*
+
+	Name <email address>
+
+*Please keep the list sorted.*
+
+***
+
+### Initial author
+
 John Mac <charles.beck@sent.com>
 
-# Other authors:
-#
+### Maintainer
+
+
+
+### Other authors
+
 
