--- a/data/tmpl/common/AUTHORS.mkd
+++ b/data/tmpl/common/AUTHORS.mkd
@@ -1,12 +1,20 @@
-# This is the official list of "{{project_name}}" authors for copyright purposes.
-# This file is distinct from the CONTRIBUTORS file.
-# See the latter for an explanation.
+##### Notice
 
-# Names should be added to this file as
-#	Name or Organization <email address>
-# The email address is not required for organizations.
-#
-# Please keep the list sorted.
+*This is the official list of **{{project_name}}** authors for copyright
+purposes.*
+
+*This file is distinct from the CONTRIBUTORS file. See the latter for an
+explanation.*
+
+*Names should be added to this file as:*
+
+	Name or Organization <email address>
+
+*The email address is not required for organizations.*
+
+*Please keep the list sorted.*
+
+***
 
 {{author}}{{.section author_email}} <{{@}}>{{.end}}
 
