--- a/data/tmpl/common/README.mkd
+++ b/data/tmpl/common/README.mkd
@@ -1,4 +1,24 @@
-{{_project_header}}
 {{project_name}}
 {{_project_header}}
+
+
+
+## Installation
+
+
+
+## Operating instructions
+
+
+
+## Copyright and licensing information
+
+{{copyright}}
+
+{{license}}
+
+Read the LICENSE file.
+
+## Contact
+
 
