Changes in templates

--- a/CHANGES.mkd
+++ b/CHANGES.mkd
@@ -1,6 +1,6 @@
 ##### Notice
 
-*This file documents the changes in the **gowizard** versions listed
+*This file documents the changes in the ***gowizard*** versions listed
 below.*
 
 *Items should be added to this file as:*
