--- a/data/tmpl/common/AUTHORS.mkd
+++ b/data/tmpl/common/AUTHORS.mkd
@@ -1,6 +1,6 @@
 ##### Notice
 
-*This is the official list of **{{project_name}}** authors for copyright
+*This is the official list of ***{{project_name}}*** authors for copyright
 purposes.*
 
 *This file is distinct from the CONTRIBUTORS file. See the latter for an
