--- a/data/tmpl/common/README.mkd
+++ b/data/tmpl/common/README.mkd
@@ -1,42 +1,41 @@
 {{project_name}}
 {{_project_header}}
 
-[ Describe the project ]
+<< Describe the project >>
 
 ## Installation
 
-{{.section is_cmd}}{{.or}}    $ [sudo -E] goinstall {{.end}}
+{{.section app_not_cmd}}<< Instructions to install >>{{.or}}    $ [sudo -E] goinstall << download URL >>{{.end}}
 
 ## Configuration
 
-[ Instructions to configure the program, if any ]
+<< Instructions to configure the program, if any >>
 
 ## Operating instructions
 
-[ Instructions to run the program ]
+<< Instructions to run the program >>
 
 ## Copyright and licensing
 
-{{copyright}}
+*{{copyright}}*
+See *AUTHORS* {{.section license_is_cc0}}file{{.or}}and *CONTRIBUTORS* files{{.end}}.
 
-{{license}}
-
-Read *LICENSE* file.
+Licensed under *{{license}}*.
+See *LICENSE* file.
 
 ## Contact
 
-[ Contact information for the distributor or programmer ]
+<< Contact information for the distributor or programmer >>
 
 ## Known bugs
 
-[ Known bugs and instructions on reporting new ones ]
+<< Known bugs and instructions on reporting new ones >>
 
 ## Credits and acknowledgments
 
-For credits, read *AUTHORS* {{.section is_cc0}}file{{.or}}and *CONTRIBUTORS*
-files{{.end}}.
+For credits, see *AUTHORS* {{.section license_is_cc0}}file{{.or}}and *CONTRIBUTORS* files{{.end}}.
 
 ## ChangeLog
 
-Read *CHANGES* file.
+See *CHANGES* file.
 
