--- a/CONTRIBUTORS.mkd
+++ b/CONTRIBUTORS.mkd
@@ -1,7 +1,7 @@
 ##### Notice
 
 *This is the official list of people who can contribute (and typically have
-contributed) code to the **gowizard** repository.*
+contributed) code to the ***gowizard*** repository.*
 
 *The AUTHORS file lists the copyright holders; this file lists people. For
 example, the employees of an organization are listed here but not in AUTHORS,
@@ -9,7 +9,7 @@ because the organization holds the copyright.*
 
 *Names should be added to this file like so:*
 
-	Name <email address>
+    Name <email address>
 
 *Please keep the list sorted.*
 
