--- a/README.mkd
+++ b/README.mkd
@@ -1,108 +1,58 @@
 gowizard
 ========
 
-### Templates
+<< Describe project >>
 
-#### Text files syntax
+To know about decisions on markup language and licenses to choose, see
+documentation in directory *doc*.
 
-The text file templates are written using the Markdown markup language since
-it has a simple syntax and it is easy to read in its raw form.
-
-Here you have some comparisons with another markup languages:
-
-+ [Compare and contrast the lightweight markup languages][1]
-+ [Lightweight markup language][2]
-
-And syntax guides:
-
-+ [Quick Syntax Guide](http://greg.vario.us/doc/markdown.txt)
-+ [Basics](http://daringfireball.net/projects/markdown/basics)
-+ [Syntax](http://daringfireball.net/projects/markdown/syntax)
-
-
-[1]: http://stackoverflow.com/questions/659227/compare-and-contrast-the-lightweight-markup-languages-textile-markdown-and-res
-[2]: http://en.wikipedia.org/wiki/Lightweight_markup_language
-
-#### Content of text templates
-
-*README* is based on:
-
-+ [How to write a good README][3]
-+ [README](http://en.wikipedia.org/wiki/README)
-
-*CHANGES* on:
-
-+ [Changelog](http://en.wikipedia.org/wiki/Changelog)
-
-*AUTHORS* and *CONTRIBUTORS* on:
-
-+ [AUTHORS](http://golang.org/AUTHORS)
-+ [CONTRIBUTORS](http://golang.org/CONTRIBUTORS)
-
-
-[3]: http://stackoverflow.com/questions/2304863/how-to-write-a-good-readme
-
-### Licenses
-
-I am agree with Google about [no to license proliferation][4] so the licenses to
-choose which have been approved by *The Open Source Initiative (OSI)* are:
-
-+ [New and Simplified BSD licenses][5]
-+ [Apache License, version 2.0][6]
-+ [GNU General Public License, version 3][7] or later
-+ [GNU Affero General Public License, version 3][8] or later
-
-In addition, it has been added a license like public domain but valid in
-whatever country:
-
-+ [Creative Commons CC0, version 1.0 Universal][9]
-
-To know more about *CC0* read [here][10].
-
-
-[4]:  http://www.zdnet.com/blog/burnette/google-says-no-to-license-proliferation/192
-[5]:  http://opensource.org/licenses/bsd-license.php
-[6]:  http://www.apache.org/licenses/LICENSE-2.0.html
-[7]:  http://www.gnu.org/licenses/gpl.html
-[8]:  http://www.gnu.org/licenses/agpl.html
-[9]:  http://creativecommons.org/publicdomain/zero/1.0/
-[10]: http://creativecommons.org/about/cc0
-
-#### Discarded licenses
-
-The [MIT/X11 License][11] has not been added since it is equivalent to the
-*Simplified BSD License*; *GNU GPLv2* because it is incompatible with the
-*2nd Apache License*; and *GNU LGPL* since:
-
-> The problem with the GNU LGPL is an outdated wording related to "derived
-> works". A derived work of the library must be covered by the same license as
-> the library itself. This definition was fine before object oriented frameworks
-> existed, but with the introduction of object oriented frameworks, different
-> people disagree whether some code that uses object-oriented inheritance is an
-> instance of a "derived work".
-
-> [Why are the class libraries licensed under the MIT X11 license?][12]
-
-
-[11]: http://opensource.org/licenses/mit-license.html
-[12]: http://www.mono-project.com/Licensing
-
-**************************************
-
-<< Describe the project >>
 
 ## Installation
 
 	$ git clone git://github.com/kless/gowizard.git
 	$ cd gowizard/gowizard && sudo -E make install ; cd -
 
+
 ## Configuration
 
-<< Instructions to configure the program, if any >>
+**ToDo**: both flags *-Author* and *-Author-email* could be read from a file.
+
 
 ## Operating instructions
 
-<< Instructions to run the program >>
+The required flags to build a new project are *-Project-name*, *-Author* and
+*-Author-email*; this last one is not necessary when the author is an
+organization (*-org*). Another required flags have values by default;
+*-Application-type*, *-Application-name*, *-License* and *-vcs*.
+
+By default, the application name for a command line tool is usually named as the
+project name. For other types of application, it is removed "go-" from project
+name.
+
+Useful flags:
+
++ *-vcs*: indicates the version control system to use, and it is used to add the
+appropriate ignore file.
+
++ *-i*: the interactive mode is a simple way to get all required information,
+showing the required choices for the flags that need it.
+
++ *-d*: prints both values to pass to the templates, and the header inserted in
+source code templates.
+
+### Suggestions about naming
+
+While the projects are sometimes named *go* to make clear that the packages are
+for Go, the packages themselves need not be.
+
+### Maintenance
+
+Copyright notices only need the year the file was created, so don't add new
+years.
+
+**Warning:** Don't edit section *default* in Metadata file; they are necessary
+to update them, if were necessary.
+
 
 ## Copyright and licensing
 
@@ -112,21 +62,31 @@ See AUTHORS and CONTRIBUTORS files.
 Licensed under **Simplified BSD License**.  
 See LICENSE file.
 
+
 ## Contact
 
-To contact, send me an e-mail through [github][1].
+To contact, send e-mail through [github][1].
+
 
 ## Known bugs
 
 To reporting bugs, please create a new issue [here][2].
 
+
 ## Credits and acknowledgments
 
 For credits, see AUTHORS and CONTRIBUTORS files.
 
+
 ## ChangeLog
 
 See CHANGES file.
+
+
+## ToDo
+
++ Update *project_name*, *application_name*, *license*; using flag *-u*.
+
 
 ***
 *Generated by* **myself**
