--- a/README.mkd
+++ b/README.mkd
@@ -1,9 +1,14 @@
 gowizard
 ========
 
-<< Describe project >>
+Tired of adding the same files every time you create a new Go project?  
+Don't know how to structure it?  
+Don't know how to apply the license?
 
-To know about decisions on markup language and licenses to choose, see
+**gowizard** creates the base for new Go projects since the chosen application
+type, and it adds the license header to source code files.
+
+To know about decisions as markup language and licenses to choose, see
 documentation in directory *doc*.
 
 
@@ -25,20 +30,19 @@ The required flags to build a new project are *-Project-name*, *-Author* and
 organization (*-org*). Another required flags have values by default;
 *-Application-type*, *-Application-name*, *-License* and *-vcs*.
 
-By default, the application name for a command line tool is usually named as the
-project name. For other types of application, it is removed "go-" from project
-name.
+By default, the application name for a command line tool is named as the project
+name. For other types of application, it is removed "go-" from project name.
 
 Useful flags:
 
-+ *-vcs*: indicates the version control system to use, and it is used to add the
-appropriate ignore file.
++ ***-vcs:*** indicates the version control system to use, and it is used to add
+the appropriate ignore file.
 
-+ *-i*: the interactive mode is a simple way to get all required information,
-showing the required choices for the flags that need it.
++ ***-i:*** the interactive mode is a simple way to get all required
+information, showing the required choices for the flags that need it.
 
-+ *-d*: prints both values to pass to the templates, and the header inserted in
-source code templates.
++ ***-d:*** prints both values to pass to the templates, and the header inserted
+in source code templates.
 
 ### Suggestions about naming
 
