--- a/README.mkd
+++ b/README.mkd
@@ -35,13 +35,13 @@ name. For other types of application, it is removed "go-" from project name.
 
 Useful flags:
 
-+ ***-vcs:*** indicates the version control system to use, and it is used to add
++ ***-vcs***: indicates the version control system to use, and it is used to add
 the appropriate ignore file.
 
-+ ***-i:*** the interactive mode is a simple way to get all required
++ ***-i***: the interactive mode is a simple way to get all required
 information, showing the required choices for the flags that need it.
 
-+ ***-d:*** prints both values to pass to the templates, and the header inserted
++ ***-d***: prints both values to pass to the templates, and the header inserted
 in source code templates.
 
 ### Suggestions about naming
