--- a/README.mkd
+++ b/README.mkd
@@ -14,6 +14,9 @@ documentation in directory *doc*.
 
 ## Installation
 
+	$ [sudo -E] goinstall github.com/kless/goconfig/config
+	$ [sudo -E] goinstall github.com/kless/go-readin/readin
+
 	$ git clone git://github.com/kless/gowizard.git
 	$ cd gowizard/gowizard && sudo -E make install ; cd -
 
