--- a/doc/design.mkd
+++ b/doc/design.mkd
@@ -7,7 +7,7 @@ It has been used the metadata for Python Software Packages to build a Metadata
 file with each project.
 
 So, could be easily changed some project data. In addition, it could be used by
-another tools to get the command application name.
+another tools to get the package name.
 
 
 ## Templates
