Added doc. to update project

--- a/README.mkd
+++ b/README.mkd
@@ -45,8 +45,13 @@ Useful flags:
 + ***-i***: the interactive mode is a simple way to get all required
 information, showing the required choices for the flags that need it.
 
-+ ***-d***: prints both values to pass to the templates, and the header inserted
-in source code templates.
++ ***-d***: prints both values to pass to the templates.
+
+It is possible to update a project already created; to get it, *gowizard* has to
+be run in the project directory (where the file Metadata). It is used the flag
+*-u*, and the values that can be changed are *-Project-name*, *-Package-name*
+and *-License*.
+
 
 ### Suggestions about naming
 
@@ -90,11 +95,6 @@ For credits, see file AUTHORS and CONTRIBUTORS (if any).
 
 For changes between releases, see file NEWS; and for changes between the commits,
 see the [commit history][3].
-
-
-## ToDo
-
-+ Update *project_name*, *package_name*, *license*; using flag *-u*.
 
 
 * * *
