--- a/README.mkd
+++ b/README.mkd
@@ -52,6 +52,12 @@ be run in the project directory (where the file Metadata). It is used the flag
 *-u*, and the values that can be changed are *-Project-name*, *-Package-name*
 and *-License*.
 
+Example:
+
+	$ gowizard -Project-name=goFoo -Author="John Foo" -Author-email="e@mail.com"
+	-Project-type=lib -License=gpl-3 -vcs=git && cd gofoo
+
+	$ gowizard -u -Project-name=goBar -License=bsd-2 -v
 
 ### Suggestions about naming
 
