--- a/README.mkd
+++ b/README.mkd
@@ -14,8 +14,8 @@ documentation in directory *doc*.
 
 ## Installation
 
-	> git clone git://github.com/kless/gowizard.git
-	> cd gowizard && ./INSTALL.sh && cd -
+	$ git clone git://github.com/kless/gowizard.git
+	$ cd gowizard && ./INSTALL.sh && cd -
 
 
 ## Configuration
@@ -42,12 +42,12 @@ the appropriate ignore file.
 
 Example:
 
-	> gowizard -Project-name=goFoo -Author="John Foo" -Author-email="e@mail.com"
+	$ gowizard -Project-name=goFoo -Author="John Foo" -Author-email="e@mail.com"
 	-Project-type=lib -License=gpl-3 -vcs=git
 
 If the configuration file has been set, then it could be shorter:
 
-	> gowizard -Project-name=goFoo -Project-type=lib
+	$ gowizard -Project-name=goFoo -Project-type=lib
 
 Useful flags:
 
@@ -71,8 +71,8 @@ Note that files are backed up adding "~" to the file name.
 
 Example:
 
-	> cd gofoo
-	> gowizard -u -Project-name=goBar -License=bsd-2 -v
+	$ cd gofoo
+	$ gowizard -u -Project-name=goBar -License=bsd-2 -v
 
 ### Suggestions about naming
 
