--- a/doc/design.mkd
+++ b/doc/design.mkd
@@ -58,38 +58,30 @@ choose which have been approved by *The Open Source Initiative (OSI)* are:
 + [New and Simplified BSD licenses][5]
 + [Apache License, version 2.0][6]
 + [GNU General Public License, version 3][7] or later
-+ [GNU Affero General Public License, version 3][8] or later
++ [GNU Lesser General Public License, version 3][8] or later
++ [GNU Affero General Public License, version 3][9] or later
 
 In addition, it has been added a license like public domain but valid in
 whatever country:
 
-+ [Creative Commons CC0, version 1.0 Universal][9]
++ [Creative Commons CC0, version 1.0 Universal][10]
 
-To know more about *CC0* read [here][10].
+To know more about *CC0* read [here][11].
 
 ### Discarded licenses
 
-The [MIT/X11 License][11] has not been added since it is equivalent to the
+The [MIT/X11 License][12] has not been added since it is equivalent to the
 *Simplified BSD License*; *GNU GPLv2* because it is incompatible with the
-*2nd Apache License*; and *GNU LGPL* since:
-
-> The problem with the GNU LGPL is an outdated wording related to "derived
-> works". A derived work of the library must be covered by the same license as
-> the library itself. This definition was fine before object oriented frameworks
-> existed, but with the introduction of object oriented frameworks, different
-> people disagree whether some code that uses object-oriented inheritance is an
-> instance of a "derived work".
-
-> [Why are the class libraries licensed under the MIT X11 license?][12]
+*2nd Apache License*.
 
 
 [4]:  http://www.zdnet.com/blog/burnette/google-says-no-to-license-proliferation/192
 [5]:  http://opensource.org/licenses/bsd-license.php
 [6]:  http://www.apache.org/licenses/LICENSE-2.0.html
 [7]:  http://www.gnu.org/licenses/gpl.html
-[8]:  http://www.gnu.org/licenses/agpl.html
-[9]:  http://creativecommons.org/publicdomain/zero/1.0/
-[10]: http://creativecommons.org/about/cc0
-[11]: http://opensource.org/licenses/mit-license.html
-[12]: http://www.mono-project.com/Licensing
+[8]:  http://www.gnu.org/licenses/lgpl.html
+[9]:  http://www.gnu.org/licenses/agpl.html
+[10]: http://creativecommons.org/publicdomain/zero/1.0/
+[11]: http://creativecommons.org/about/cc0
+[12]: http://opensource.org/licenses/mit-license.html
 
