--- a/NEWS.mkd
+++ b/NEWS.mkd
@@ -15,6 +15,8 @@ listed below.*
 
 ### 2010-11-??  v0.9.9
 
++ Added script for easy installation of commands and *cgo* libraries.
+
 + Fixed re-writing of larger files.
 
 
