--- a/CONTRIBUTORS.mkd
+++ b/CONTRIBUTORS.mkd
@@ -1,7 +1,7 @@
 ###### Notice
 
 *This is the official list of people who can contribute (and typically have
-contributed) code to the ***Go-Wizard*** repository.*
+contributed) code to the ***GoWizard*** repository.*
 
 *The AUTHORS file lists the copyright holders; this file lists people. For
 example, the employees of an organization are listed here but not in AUTHORS,
