--- a/README.mkd
+++ b/README.mkd
@@ -1,11 +1,11 @@
-Go-Wizard
+GoWizard
 =========
 
 Tired of adding the same files every time you create a new Go project?  
 Don't know how to structure it?  
 Don't know how to apply the license?
 
-**Go-Wizard** creates the base for new Go projects since the chosen project
+**GoWizard** creates the base for new Go projects since the chosen project
 type, and it adds the license header to source code files.
 
 To know about decisions as markup language and licenses to choose, see
@@ -14,8 +14,8 @@ documentation in directory *doc*.
 
 ## Installation
 
-	git clone git://github.com/kless/Go-Wizard.git
-	cd Go-Wizard && ./Install.sh && cd -
+	git clone git://github.com/kless/GoWizard.git
+	cd GoWizard && ./Install.sh && cd -
 
 
 ## Configuration
@@ -58,7 +58,7 @@ information, showing the required choices for the flags that need it.
 
 ### Update
 
-It is possible to update a project already created; to get it, *Go-Wizard* has to
+It is possible to update a project already created; to get it, *GoWizard* has to
 be run in the project directory (where the file Metadata). It is used the flag
 *-u*, and the values that can be changed are *-Project-name*, *-Package-name*
 and *-License*.
@@ -90,7 +90,7 @@ to update it, if were necessary.
 
 ## Copyright and licensing
 
-***Copyright 2010  The "Go-Wizard" Authors***  
+***Copyright 2010  The "GoWizard" Authors***  
 See file AUTHORS and CONTRIBUTORS (if any).
 
 Licensed under **BSD-2 Clause license**.  
