--- a/README.mkd
+++ b/README.mkd
@@ -5,24 +5,24 @@ Tired of adding the same files every time you create a new Go project?
 Don't know how to structure it?  
 Don't know how to apply the license?
 
-**GoWizard** creates the base for new Go projects since the chosen project
-type, and it adds the license header to source code files.
-
-To know about decisions as markup language and licenses to choose, see
-documentation in directory *doc*.
+**GoWizard** creates the base for new Go projects and it adds the license header
+to source code files.
 
 
 ## Installation
 
-	git clone git://github.com/kless/GoWizard.git
-	cd GoWizard && ./Install.sh && cd -
+	goinstall github.com/kless/GoWizard/gowizard
 
 
 ## Configuration
 
-The file named ***.gowizard*** is created during installation in your home
-directory. It allows set the flags *-Author*, *-Author-email*, *-License*, and
-*-vcs*, with a value by default.
+If you want not repeat the same input every time you create a project, then you
+could use an user configuration file in your home directory:
+
+	[ -f ${HOME}/.gowizard ] || cp ${GOROOT}/lib/gowizard/user.cfg ${HOME}/.gowizard
+
+It allows set the flags *-Author*, *-Author-email*, *-License*, and *-vcs*,
+with a value by default.
 
 
 ## Operating instructions
@@ -43,7 +43,7 @@ the appropriate ignore file.
 Example:
 
 	gowizard -Project-name=Go-Foo -Author="John Foo" -Author-email="e@mail.com" \
-	-Project-type=pac -License=gpl-3 -vcs=git
+	-Project-type=pac -License=bsd-2 -vcs=git
 
 If the configuration file has been set, then it could be shorter:
 
@@ -56,36 +56,18 @@ information, showing the required choices for the flags that need it.
 
 + ***-d***: prints both values to pass to the templates.
 
-### Update
-
-It is possible to update a project already created; to get it, *GoWizard* has to
-be run in the project directory (where the file Metadata). It is used the flag
-*-u*, and the values that can be changed are *-Project-name*, *-Package-name*
-and *-License*.
-
-So that the header comments in source code files are updated correctly, the
-notices of copyright and license have to be separated of another comments by at
-least one blank line.
-
-Note that files are backed up adding "~" to the file name.
-
-Example:
-
-	cd gofoo
-	gowizard -u -Project-name=Go-Bar -License=bsd-2 -v
-
 ### Suggestions about naming
 
-While the projects are sometimes named *go* to make clear that the packages are
-for Go, the packages themselves need not be.
+> Frequently, the name that you use for your package will include the name "Go"
+as a prefix, suffix, or part of its acronym, and you may or may not want this
+to be a part of the actual command or package name in a go source file.
+
+http://code.google.com/p/go-wiki/wiki/PackagePublishing#Subdirectories
 
 ### Maintenance
 
 Copyright notices only need the year the file was created, so don't add new
 years.
-
-**Warning:** Don't edit section *CORE* in file Metadata, since it is necessary
-to update it, if were necessary.
 
 
 ## Copyright and licensing
