Fixed path of user config.

--- a/README.mkd
+++ b/README.mkd
@@ -6,8 +6,7 @@ Don't know how to structure it?
 Don't know how to apply the license?
 
 **GoWizard** creates the base for new Go projects, adds the license header
-to source code files, and creates an ignore file for the VCS given.
-
+to source code files, and creates an ignore file for the VCS given.  
 The ignore file has been configured to ignore files finished in "~" (used like
 backups, in Unix), the ones started with "." (hidden files, in Unix), and the
 ones started with "_" to have files that don't be committed. It also ignores
@@ -24,7 +23,7 @@ files got from compiling and linking.
 If you want not repeat the same input every time you create a project, then you
 could use an user configuration file in your home directory:
 
-	[ -f ${HOME}/.gowizard ] || cp ${GOROOT}/lib/gowizard/user.cfg ${HOME}/.gowizard
+	[ -f ${HOME}/.gowizard ] || cp ${GOROOT}/src/pkg/github.com/kless/GoWizard/data/user.cfg ${HOME}/.gowizard
 
 It allows set the flags *-Author*, *-Author-email*, *-License*, and *-vcs*,
 with a value by default.
