--- a/NEWS.mkd
+++ b/NEWS.mkd
@@ -28,6 +28,8 @@ any.
 
 + Updated Go API for templates.
 
++ Splitted in library and command, so the library could be used by a Go IDE.
+
 
 ### 2010-10-11  v0.9.8
 
